--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Utrains",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "my-app": "file:"
   },
   "devDependencies": {
     "chai": "^5.1.0",
