--- a/script/Jenkinsfile
+++ b/script/Jenkinsfile
@@ -5,6 +5,7 @@ pipeline{
         stage('install-env'){
             agent{docker{image 'node:14'}}
             steps{
+                sh 'sudo chown -R 995:993 "/.npm"'
                 sh 'npm install'
             }
             post{
