--- a/script/Jenkinsfile
+++ b/script/Jenkinsfile
@@ -3,11 +3,11 @@ pipeline{
 
     stages{
         stage('install-env'){
-            agent{docker{image 'node:14'}}
+            agent{
+                docker{image 'node:14'
+                args '-u root:sudo'}}
             steps{
-                sh 'apt update'
-                sh 'apt install sudo -y'
-                sh 'sudo chown -R 995:993 "/.npm"'
+                //sh 'sudo chown -R 995:993 "/.npm"'
                 sh 'npm install'
             }
             post{
