--- a/script/Jenkinsfile
+++ b/script/Jenkinsfile
@@ -1,11 +1,13 @@
 pipeline{
-    agent any
+    agent{
+        docker{image 'node:14'
+                args '-u root:sudo'
+            }
+    }
 
     stages{
         stage('install-env'){
-            agent{
-                docker{image 'node:14'
-                args '-u root:sudo'}}
+            
             steps{
                 //sh 'sudo chown -R 995:993 "/.npm"'
                 sh 'npm install'
@@ -16,6 +18,19 @@ pipeline{
                 }
                 failure{
                     echo "Fail install nmp"
+                }
+            }
+        }
+        stage('package'){
+            steps{
+                sh 'npm pack'
+            }
+            post{
+                success{
+                    echo 'Successful package'
+                }
+                failure{
+                    echo 'fail package'
                 }
             }
         }
